Opened 16 years ago
Closed 14 years ago
#3855 closed bug (fixed)
MediaPlayer doesn't play from file beginning
Reported by: | marcusoverhagen | Owned by: | stippi |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | Applications/MediaPlayer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When MediaPlayer is playing an avi file, and I drop a second avi file on the player window, the second file doesn't start playback from the beginning, but instead from somewhere in the middle.
Change History (6)
comment:1 by , 16 years ago
Owner: | changed from | to
---|
comment:2 by , 16 years ago
I can try... the problem is that sometimes the asynchronous playback manager gets in the way. The Controller tries to reset everything, but sometimes the values are reset in the PlaybackManager to old values from the previous stream.
comment:3 by , 15 years ago
Priority: | normal → high |
---|---|
Version: | R1/pre-alpha1 → R1/Development |
This happens now much more often since the MediaPlayer remembers the previous playlist (which, btw, only works when you quit MediaPlayer by closing its window): if a playlist is already at its end, and you drop a new file/folder on MediaPlayer, it will try to continue to play at the old position from the last file.
Not sure if it's the same bug, though, but it's sure annoying.
comment:5 by , 15 years ago
The issue my comment above referred to is fixed in hrev36224. From the code, I would say it cannot be related to the original problem, though.
Does that one still occur?
comment:6 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
This one is fixed in hrev38551.
Perhaps you can fix this faster than I could.