* Only restore the previous playing position when there is a file that is   currently playing; this fixes the the problem I mentioned in a comment in   bug #3855.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36224 a95241bf-73f2-0310-859d-f6bbb57e9c96